--- a/test/api/virtual_screening/config.ini
+++ b/test/api/virtual_screening/config.ini
@@ -2,8 +2,8 @@
 mol2_path = /home/faccioli/workspace/drugdesign_api/test/api/virtual_screening/ligand/mol2/
 pdbqt_ligand_path = /home/faccioli/workspace/drugdesign_api/test/api/virtual_screening/ligand/pdbqt/
 pdb_ligand_path = /home/faccioli/workspace/drugdesign_api/test/api/virtual_screening/ligand/pdb/
-pdb_path = /home/faccioli/workspace/drugdesign_api/test/api/virtual_screening/receptor/
-pdbqt_receptor_path = /home/faccioli/workspace/drugdesign_api/test/api/virtual_screening/receptor/pdbqt/
+pdb_path = /home/faccioli/workspace/drugdesign_api/test/api/virtual_screening/receptor/ns3pro/
+pdbqt_receptor_path = /home/faccioli/workspace/drugdesign_api/test/api/virtual_screening/receptor/ns3pro/pdbqt/
 path_save_structure = /home/faccioli/workspace/drugdesign_api/test/api/virtual_screening/structures/
 path_save_log = /home/faccioli/workspace/drugdesign_api/test/api/virtual_screening/log
 path_analysis = /home/faccioli/workspace/drugdesign_api/test/api/virtual_screening/analysis
@@ -46,3 +46,4 @@ maxResultSize = 2g
 [DRUGDESIGN_API]
 path_execution=/home/faccioli/workspace/drugdesign_api/test/api/virtual_screening
 spark_submit=/home/faccioli/Programs/spark-1.4.1-bin-hadoop2.4/bin/spark-submit
+receptor_repository=/home/faccioli/workspace/drugdesign_api/test/api/virtual_screening/receptor/
