Added ligand repository

--- a/test/api/virtual_screening/config.ini
+++ b/test/api/virtual_screening/config.ini
@@ -1,13 +1,13 @@
 [DEFAULT]
-mol2_path = /home/faccioli/workspace/drugdesign_api/test/api/virtual_screening/ligand/mol2/
-pdbqt_ligand_path = /home/faccioli/workspace/drugdesign_api/test/api/virtual_screening/ligand/pdbqt/
-pdb_ligand_path = /home/faccioli/workspace/drugdesign_api/test/api/virtual_screening/ligand/pdb/
+mol2_path = /home/faccioli/workspace/drugdesign_api/test/api/virtual_screening/ligand/test/mol2/
+pdbqt_ligand_path = /home/faccioli/workspace/drugdesign_api/test/api/virtual_screening/ligand/test/pdbqt/
+pdb_ligand_path = /home/faccioli/workspace/drugdesign_api/test/api/virtual_screening/ligand/test/pdb/
 pdb_path = /home/faccioli/workspace/drugdesign_api/test/api/virtual_screening/receptor/ns3pro/
 pdbqt_receptor_path = /home/faccioli/workspace/drugdesign_api/test/api/virtual_screening/receptor/ns3pro/pdbqt/
 path_save_structure = /home/faccioli/workspace/drugdesign_api/test/api/virtual_screening/structures/
 path_save_log = /home/faccioli/workspace/drugdesign_api/test/api/virtual_screening/log
 path_analysis = /home/faccioli/workspace/drugdesign_api/test/api/virtual_screening/analysis
-ligand_database_path_file = /home/faccioli/workspace/drugdesign_api/test/api/virtual_screening/ligand/Database/database.txt
+ligand_database_path_file = /home/faccioli/workspace/drugdesign_api/test/api/virtual_screening/ligand/test/Database/database.txt
 json_log = /home/faccioli/workspace/drugdesign_api/test/api/virtual_screening/json/log
 
 [VINA]
@@ -47,3 +47,4 @@ maxResultSize = 2g
 path_execution=/home/faccioli/workspace/drugdesign_api/test/api/virtual_screening
 spark_submit=/home/faccioli/Programs/spark-1.4.1-bin-hadoop2.4/bin/spark-submit
 receptor_repository=/home/faccioli/workspace/drugdesign_api/test/api/virtual_screening/receptor/
+ligand_repository=/home/faccioli/workspace/drugdesign_api/test/api/virtual_screening/ligand/
