--- a/test/api/virtual_screening/config.ini
+++ b/test/api/virtual_screening/config.ini
@@ -4,11 +4,11 @@ pdbqt_ligand_path = /home/faccioli/workspace/drugdesign_api/test/api/virtual_scr
 pdb_ligand_path = /home/faccioli/workspace/drugdesign_api/test/api/virtual_screening/ligand/test/pdb/
 pdb_path = /home/faccioli/workspace/drugdesign_api/test/api/virtual_screening/receptor/ns3pro/
 pdbqt_receptor_path = /home/faccioli/workspace/drugdesign_api/test/api/virtual_screening/receptor/ns3pro/pdbqt/
-path_save_structure = /home/faccioli/workspace/drugdesign_api/test/api/virtual_screening/test_for_api/structures/
-path_save_log = /home/faccioli/workspace/drugdesign_api/test/api/virtual_screening/test_for_api/log
-path_analysis = /home/faccioli/workspace/drugdesign_api/test/api/virtual_screening/test_for_api/analysis
+path_save_structure = /home/faccioli/workspace/drugdesign_api/test/api/virtual_screening/VS/test_for_api/structures/
+path_save_log = /home/faccioli/workspace/drugdesign_api/test/api/virtual_screening/VS/test_for_api/log
+path_analysis = /home/faccioli/workspace/drugdesign_api/test/api/virtual_screening/VS/test_for_api/analysis
 ligand_database_path_file = /home/faccioli/workspace/drugdesign_api/test/api/virtual_screening/ligand/test/Database/database.txt
-json_log = /home/faccioli/workspace/drugdesign_api/test/api/virtual_screening/json/log
+json_log = /home/faccioli/workspace/drugdesign_api/test/api/virtual_screening/VS/test_for_api/json/log
 
 [VINA]
 pythonsh = /home/faccioli/Programs/MGLTools-1.5.6/bin/pythonsh
@@ -48,3 +48,4 @@ path_execution=/home/faccioli/workspace/drugdesign_api/test/api/virtual_screenin
 spark_submit=/home/faccioli/Programs/spark-1.4.1-bin-hadoop2.4/bin/spark-submit
 receptor_repository=/home/faccioli/workspace/drugdesign_api/test/api/virtual_screening/receptor/
 ligand_repository=/home/faccioli/workspace/drugdesign_api/test/api/virtual_screening/ligand/
+sufix_dir_for_vs_user = VS
